# dinomem-sdk

./: .gitignore  LICENSE  PUBLISHING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: workspace-migration.md
.github/workflows/: ci.yml
claude-agent/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
claude-agent/src/: index.ts  recall-hook.ts  tools.ts
claude-agent/test/: integration.test.ts
cli/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
cli/src/: detect.ts  files.ts  index.ts  install.ts
cli/src/commands/: init.ts
crewai/: README.md  pyproject.toml
crewai/agentmem_crewai/: __init__.py  config.py  helpers.py  tools.py
crewai/dinomem_crewai/: __init__.py  config.py  helpers.py  tools.py
crewai/tests/: test_tools.py
mastra/: CHANGELOG.md  README.md  package-lock.json  package.json  tsup.config.ts
mastra/src/: index.ts
mastra/test/: integration.test.ts
mcp/: CHANGELOG.md  README.md  package-lock.json  package.json  tsup.config.ts
mcp/scripts/: smoke.mjs
mcp/src/: index.ts  tools.ts
python/: README.md  pyproject.toml
python/agentmem/: __init__.py  client.py
python/agentmem_py/: client.py
python/dinomem_py/: __init__.py  client.py
typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  index.ts  types.ts
vercel-ai/: CHANGELOG.md  README.md  package-lock.json  package.json  tsup.config.ts
vercel-ai/src/: helpers.ts  index.ts  middleware.ts  tools.ts
vercel-ai/test/: integration.test.ts
