[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmem-crewai"
version = "0.1.0"
description = "AgentMem integration for CrewAI — drop-in memory tools for any Crew agent"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.14"
authors = [{ name = "rooney011", email = "bvsa2020@gmail.com" }]
keywords = ["crewai", "ai", "agents", "memory", "agentmem", "tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "agentmem-py>=0.2.0",
  "crewai>=1.10.0,<2.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[project.urls]
Homepage   = "https://agentmem-dashboard.vercel.app"
Repository = "https://github.com/rooney011/agentmem-sdk"
Issues     = "https://github.com/rooney011/agentmem-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentmem_crewai"]

[tool.hatch.build.targets.sdist]
include = [
  "/agentmem_crewai",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]
exclude = [
  "venv",
  "dist",
  "**/__pycache__",
  "**/.pytest_cache",
  "**/*.pyc",
]
