[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dinomem-crewai"
version = "0.1.1"
description = "DinoMem integration for CrewAI — drop-in memory tools for any Crew agent"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.14"
authors = [{ name = "DinoMem" }]
keywords = ["crewai", "ai", "agents", "memory", "dinomem", "tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "dinomem-py>=0.2.1,<0.3",
  "crewai>=1.10.0,<2.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[project.urls]
Homepage   = "https://dinomem-dashboard.vercel.app"
Repository = "https://github.com/DinoMem/dinomem-sdk"
Issues     = "https://github.com/DinoMem/dinomem-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["dinomem_crewai"]

[tool.hatch.build.targets.sdist]
include = [
  "/dinomem_crewai",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]
exclude = [
  "venv",
  "dist",
  "**/__pycache__",
  "**/.pytest_cache",
  "**/*.pyc",
]
